--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   "parser": "babel-eslint",
   "rules": {
     "no-plusplus": [0],
+    "arrow-body-style": 0,
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/prop-types": [0],
     "react/jsx-props-no-spreading": [0],
