rollback to deploy commit

--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
-BROWSER=none
+CONFIG = {
+  apiKey: 'AIzaSyBg1HM2EWvtHRSjeQVTikcDWvqE4kSXHfc',
+  authDomain: 'chat-web-app-sdev.firebaseapp.com',
+  projectId: 'chat-web-app-sdev',
+  storageBucket: 'chat-web-app-sdev.appspot.com',
+  messagingSenderId: '1089359601188',
+  appId: '1:1089359601188:web:6e1e3ec76cfa56f192c2b1',
+  databaseURL:
+    'https://chat-web-app-sdev-default-rtdb.asia-southeast1.firebasedatabase.app/',
+};
+FCM_VAPID_KEY =
+  'BOw7hQXpkYn6gKWk-c-MhbGONlhhLbWxsOIkdYJMS4g-SwYTAp_lrRL9TFKb4iw2NtB94KTu3Rm5CHG1qWdaVq8';
